deploy/node-service-k8s/00-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-node-service-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /rpc
